Aula 24.05 Sakvando informações no banco SQL.
Aula 24.05 Sakvando informações no banco SQL.

http://localhost:8080/sistemausuarios/cadastro.html

--- a/sistemausuarios/sistemausuarios/WebContent/cadastro.html
+++ b/sistemausuarios/sistemausuarios/WebContent/cadastro.html
@@ -8,7 +8,7 @@
 
 	<h1>Cadastro de Usuário</h1>
 	
-	<form>
+	<form action="entrada" method="POST">
 		Nome: <input type="text" name="txtnome"><br><br>
 		Login: <input type="text" name="txtlogin"><br><br>
 		Senha: <input type="password" name="txtsenha"><br><br>
